--- a/Project.toml
+++ b/Project.toml
@@ -1,6 +1,10 @@
 name = "Covid19Snippets"
 authors = ["singularitti"]
-[compat]
-julia = "1.5.0"
+
 [deps]
+DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 DrWatson = "634d3b9d-ee7a-5ddf-bec9-22491ea816e1"
+UrlDownload = "856ac37a-3032-4c1c-9122-f86d88358c8b"
+
+[compat]
+julia = "1"
